Use declared constructor for new instance